log
Wed 08 May 2024 12:46:26 AM UTC: 
 tests:  1|8
total_score: 0/70
d964ca0
Wed 08 May 2024 12:58:47 AM UTC: 
 treemap.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
0677a27
Wed 08 May 2024 01:14:33 AM UTC: 
 treemap.c | 48 ++++++++++++++++++++++++++++++++++++++++++++----
 1 file changed, 44 insertions(+), 4 deletions(-)
 tests:  5|7
total_score: 5/70
179bb45
Wed 08 May 2024 01:15:31 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|7
total_score: 5/70
9701830
Wed 08 May 2024 01:16:31 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|7
total_score: 5/70
87e70ac
Wed 08 May 2024 01:18:09 AM UTC: 
 treemap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
7148fbc
Wed 08 May 2024 01:23:46 AM UTC: 
 treemap.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
In file included from test.c:4:
treemap.c:81:1: error: expected identifier or ‘(’ before ‘}’ token
   81 | }
      | ^
Compilation failed
638ca7d
Wed 08 May 2024 01:24:07 AM UTC: 
 treemap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  11|6
total_score: 15/70
1114f6e
Wed 08 May 2024 01:25:28 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
ece9fc7
Wed 08 May 2024 01:34:37 AM UTC: 
 treemap.c | 22 +++++++++++++++++++---
 1 file changed, 19 insertions(+), 3 deletions(-)
 tests:  13|5
total_score: 25/70
b52b910
Wed 08 May 2024 01:39:35 AM UTC: 
 treemap.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  15|4
total_score: 25/70
68940db
Wed 08 May 2024 01:51:37 AM UTC: 
 treemap.c | 44 +++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 43 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:137:20: error: unused variable ‘aux’ [-Werror=unused-variable]
  137 |         TreeNode * aux = node->parent;
      |                    ^~~
treemap.c:156:12: error: ‘lalal’ undeclared (first use in this function)
  156 |     return lalal;
      |            ^~~~~
treemap.c:156:12: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:156:12: error: ‘return’ with a value, in function returning void [-Werror=return-type]
treemap.c:113:6: note: declared here
  113 | void removeNode(TreeMap * tree, TreeNode* node) {
      |      ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
169edf4
Wed 08 May 2024 01:51:53 AM UTC: 
 treemap.c | 5 -----
 1 file changed, 5 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:137:20: error: unused variable ‘aux’ [-Werror=unused-variable]
  137 |         TreeNode * aux = node->parent;
      |                    ^~~
cc1: all warnings being treated as errors
Compilation failed
7e78f6f
Wed 08 May 2024 01:52:28 AM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  16|4
total_score: 30/70
f688895
Wed 08 May 2024 01:57:39 AM UTC: 
 treemap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  16|4
total_score: 30/70
25e65b9
Wed 08 May 2024 01:59:35 AM UTC: 
 treemap.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  16|4
total_score: 30/70
08417ba
Wed 08 May 2024 02:23:22 AM UTC: 
 treemap.c | 21 +++++++++++++--------
 1 file changed, 13 insertions(+), 8 deletions(-)
 tests:  16|4
total_score: 30/70
51ca98b
Wed 08 May 2024 02:25:48 AM UTC: 
 treemap.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  16|4
total_score: 30/70
205366e
Wed 08 May 2024 02:34:40 AM UTC: 
 treemap.c | 10 +---------
 1 file changed, 1 insertion(+), 9 deletions(-)
 tests:  16|4
total_score: 30/70
111df23
Wed 08 May 2024 02:38:57 AM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  18|3
total_score: 40/70
4743688
Wed 08 May 2024 02:58:24 AM UTC: 
 treemap.c | 38 ++++++++++++++++++++++++++++++++++++++
 1 file changed, 38 insertions(+)
 tests:  0|0
127e2e7
Wed 08 May 2024 02:58:44 AM UTC: 
 treemap.c | 8 --------
 1 file changed, 8 deletions(-)
 tests:  20|3
total_score: 45/70
41b2f9b
Wed 08 May 2024 03:02:15 AM UTC: 
 treemap.c | 19 ++++++++++++++++---
 1 file changed, 16 insertions(+), 3 deletions(-)
 tests:  20|3
total_score: 45/70
407d0d5
Wed 08 May 2024 03:03:41 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  20|3
total_score: 45/70
72be51a
Wed 08 May 2024 03:06:38 AM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  20|3
total_score: 45/70
4819394
Wed 08 May 2024 03:22:19 AM UTC: 
 treemap.c | 27 ++++++---------------------
 1 file changed, 6 insertions(+), 21 deletions(-)
 tests:  22|2
total_score: 50/70
1b41e5c
Wed 08 May 2024 03:30:41 AM UTC: 
 treemap.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  22|2
total_score: 50/70
62a1dea
Wed 08 May 2024 03:32:02 AM UTC: 
 treemap.c | 7 -------
 1 file changed, 7 deletions(-)
 tests:  22|2
total_score: 50/70
43f9553
Wed 08 May 2024 03:35:06 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  22|2
total_score: 50/70
070b471
Wed 08 May 2024 03:42:01 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  22|2
total_score: 50/70
f8147ec
Wed 08 May 2024 03:44:38 AM UTC: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  22|2
total_score: 50/70
2dcd1c6
Wed 08 May 2024 03:47:34 AM UTC: 
 treemap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  22|2
total_score: 50/70
cddac56
Wed 08 May 2024 04:04:31 AM UTC: 
 treemap.c | 48 ++++++++++++++++++++++++++++++------------------
 1 file changed, 30 insertions(+), 18 deletions(-)
 tests:  25|1
total_score: 60/70
15930d3
Wed 08 May 2024 04:09:40 AM UTC: 
 treemap.c | 34 +++++++++++++++++-----------------
 1 file changed, 17 insertions(+), 17 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘nextTreeMap’:
treemap.c:250:16: error: ‘parent’ undeclared (first use in this function)
  250 |         while (parent != NULL && aux == parent->right) {
      |                ^~~~~~
treemap.c:250:16: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
9bd7b67
Wed 08 May 2024 04:10:06 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  22|2
total_score: 50/70
0f0bd79
Wed 08 May 2024 04:10:36 AM UTC: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  22|2
total_score: 50/70
9674c87
Wed 08 May 2024 04:10:49 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  25|1
total_score: 60/70
642fcfa
Thu 09 May 2024 01:28:45 AM UTC: 
 treemap.c | 23 ++++++++++++++++++++++-
 1 file changed, 22 insertions(+), 1 deletion(-)
 tests:  26|1
total_score: 60/70
236bf39
Thu 09 May 2024 01:48:31 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  26|1
total_score: 60/70
cf4fe1f
Thu 09 May 2024 01:50:42 AM UTC: 
 treemap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  26|1
total_score: 60/70
219d10d
Thu 09 May 2024 01:51:10 AM UTC: 
 treemap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  26|1
total_score: 60/70
2384abc
Thu 09 May 2024 01:54:21 AM UTC: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  26|1
total_score: 60/70
9255627
Thu 09 May 2024 01:59:59 AM UTC: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  29|0
total_score: 70/70
32a2434
